01 - OpenCRVS Documentation/v1.3/setup/2.-gather-requirements.md
---
title: "2. Gather requirements"
source_url: "https://documentation.opencrvs.org/v1.3/setup/2.-gather-requirements"
markdown_url: "https://documentation.opencrvs.org/v1.3/setup/2.-gather-requirements.md"
version: "v1.3"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:928c48370688af68eea69c6acc05c5cbb01308ec339d75393fc16ea015bb1360"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.3/setup/2.-gather-requirements.md).

# 2. Gather requirements

Prepare all the inputs required for product configuration.

In order to configure the OpenCRVS product, you will need a number of inputs. These requirements are listed below and templates provided where relevant. Gather these requirements in advance to make sure you have everything you need before you get started.

### Checklist

* [ ] **Rules and regulations for civil registration in your country**\
  These will be used to inform configuration parameters such as the legally stipulated timeframe to register a vital event, questions you must ask in the forms (supporting document requirements etc.)&#x20;

  <div data-gb-custom-block data-tag="hint" data-style="info" class="hint hint-info"><p><strong>Note.</strong> rules and regulations should help a country achieve universal civil registration, not get in the way. A comprehensive review of all CRVS rules and regulations should be conducted as part of analysis to inform effective digitised civil registration services - this may mean reform is required as part of a digital transformation programme.</p></div>

* [ ] **Administrative structure and areas**\
  This will be used ensure that the correct administrative structure is in place to enable registration workflows and effective reporting. [Complete this CSV template.](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/reqs-gathering-templates/Administrative%20Structure.xlsx)

* [ ] **Statistical reference data**

  Population statistics and crude birth and death rates are required to be able to calculate completeness rates using accurate estimates of the number of vital events occurring. For increased accuracy these are required over time and by location. [Complete this CSV template.](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/reqs-gathering-templates/Administrative%20Statistics.xlsx)

* [ ] **Registration office and health facilities**\
  This will be used to populate the product with reference data for these offices. Complete this CSV template for [offices](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/reqs-gathering-templates/CRVS%20Offices.xlsx) and this for [facilities](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/reqs-gathering-templates/Health%20Facilities.xlsx).

* [ ] **Translation**\
  If you will offer the product in multiple languages, you need to translate the English copy into these languages in advance of configuration. You can edit all the copy for the login application [here](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/api/content/login/login.json), the client application [here](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/api/content/client/client.json) and the notification messages [here](https://github.com/opencrvs/opencrvs-countryconfig/blob/develop/src/api/content/notification/notification.json).

* [ ] **Existing birth and death declaration forms**\
  Get hold of the existing registration forms and consider how you could optimise them for the digital world. &#x20;

* [ ] **Re-design vital event certificates**\
  You can add your certificates by uploading an SVG file of the document. When using a digital system, you can re-design vital event certificates to look good and be fit for purpose including innovations such as QR codes. Don't just digitise a paper certificate that wasn't designed with digital in mind.

* [ ] **Government logo**\
  You can make the product look and feel like yours by uploading a logo to appear throughout the product.&#x20;

* [ ] **Business process maps (as-is and to-be)**\
  Understanding the current challenges and how future processes (enabled by technology) can overcome these, is critical to a successful transformation of your civil registration services. These processes will inform which users do what in your country.  Using the CRVS Digitisation Guidebook (<http://www.crvs-dgb.org/en/>) can help you conduct business process analysis as well as a number of other activities that effectively prepare for CRVS digitisation.


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.3/setup/2.-gather-requirements.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
