01 - OpenCRVS Documentation/v1.9/setup/2.-gather-requirements.md
---
title: "3. Gather requirements"
source_url: "https://documentation.opencrvs.org/v1.9/setup/2.-gather-requirements"
markdown_url: "https://documentation.opencrvs.org/v1.9/setup/2.-gather-requirements.md"
version: "v1.9"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:a27fe294b145f9d8e30b8a9338cc49da6c567eb5eddac541e98686ec3c1dc197"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.9/setup/2.-gather-requirements.md).

# 3. Gather requirements

Prepare all the inputs required for product configuration.

In order to configure the OpenCRVS product, you will need a number of inputs. These requirements are listed below and templates are provided where relevant. Gather these requirements in advance to make sure you have everything you need before you get started.

{% hint style="info" %}
[Configuration, testing and technical configuration files](/v1.9/general/release-notes.md) Check out our release notes for configuration template files to help you configure your OpenCRVS instance and version
{% endhint %}

### How to complete the configuration templates

{% embed url="<https://www.youtube.com/watch?v=5hpczjwjQ48>" %}

### Checklist

* [ ] **Gather and analysis the rules and regulations for civil registration in your country** These will be used to inform configuration parameters such as the legally stipulated timeframe to register a vital event, questions you must ask in the forms (supporting document requirements etc.)

  Not&#x65;**.** Rules and regulations should help a country achieve universal civil registration, not get in the way. A comprehensive review of all CRVS rules and regulations should be conducted as part of analysis to inform effective digitised civil registration services - this may mean reform is required as part of a digital transformation programme.
* [ ] **Create as-is and to-be business process maps** Understanding the current challenges and how future processes (enabled by technology) can overcome these, is critical to a successful transformation of your civil registration services. These processes will inform which users do what in your country. Using the CRVS Digitisation Guidebook (<http://www.crvs-dgb.org/en/>) can help you conduct business process analysis as well as a number of other activities that effectively prepare for CRVS digitisation. [3.1 Mapping business processes](/v1.9/setup/2.-gather-requirements/3.1-mapping-business-processes.md)
* [ ] **Use a PoC to identify additional system requirements** OpenCRVS can quickly be configured to understand its applicability for the country context and to identify gaps in the existing product. The PoC is a brilliant opportunity to identify additional system requirements - watch this video to understand how.

{% embed url="<https://www.youtube.com/watch?v=gYj7TSzsoNo>" %}
How to use a PoC to identify system requirements
{% endembed %}

* [ ] **Complete the Administrative structure reference template** This will be used ensure that the correct administrative structure is in place to enable registration workflows and effective reporting.
* [ ] **Complete the Statistical reference data template**

  Population statistics and crude birth and death rates are required to be able to calculate completeness rates using accurate estimates of the number of vital events occurring. For increased accuracy these are required over time and by location.
* [ ] **Complete the Registration office reference data template** This will be used to populate the product with reference data for these offices
* [ ] **Complete and Health facilities reference data template** This will be used to populate the declaration form so a health facility can be selected as a place of birth or death
* [ ] **Complete the Application Settings template** You can make the product look and feel like yours by uploading a logo to appear throughout the product [3.3 Define your application settings](/v1.9/setup/2.-gather-requirements/3.3-define-your-application-settings.md)
* [ ] **Complete the User Mapping template** Map Registration roles in your country to system roles in OpenCRVS
* [ ] **Design your event declaration forms** Get hold of the existing registration forms and consider how you could optimise them for the digital world [3.4 Designing event declaration forms](/v1.9/setup/2.-gather-requirements/3.4-designing-event-declaration-forms.md)
* [ ] **Design vital event certificates** When using a digital system, you can re-design vital event certificates to look good and be fit for purpose including innovations such as QR codes. Don't just digitise a paper certificate that wasn't designed with digital in mind. [3.5 Designing a certified copy](/v1.9/setup/2.-gather-requirements/3.5-designing-a-certificate-template.md)
* [ ] **Add translations** If you will offer the product in multiple languages, you need to translate the English copy into these languages in advance of configuration
* [ ] **Complete the Email/SMS copy template** Choose what messaging you want to send to informants and system users


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.9/setup/2.-gather-requirements.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
